--- a/index.html
+++ b/index.html
@@ -66,21 +66,33 @@
 
         <ul class="about__social">
           <li class="icon">
-            <a class="social__link" href="">
+            <a
+              class="social__link"
+              href="https://www.youtube.com/user/starwars"
+              target="blank"
+            >
               <svg class="social__svg" width="30" height="21">
                 <use href="./image/icons-sprite.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
           <li class="icon">
-            <a class="social__link" href="">
+            <a
+              class="social__link"
+              href="https://www.instagram.com/starwars/ "
+              target="blank"
+            >
               <svg class="social__svg" width="31" height="30">
                 <use href="./image/icons-sprite.svg#icon-inst"></use>
               </svg>
             </a>
           </li>
           <li class="icon">
-            <a class="social__link" href="">
+            <a
+              class="social__link"
+              href="https://twitter.com/starwarsuk"
+              target="blank"
+            >
               <svg class="social__svg" width="31" height="26">
                 <use href="./image/icons-sprite.svg#icon-twitter"></use>
               </svg>
@@ -229,7 +241,7 @@
         </svg>
       </div>
     </div>
-    <script src="./js/index.js"></script>
+    <script src="./js/form.js"></script>
     <script src="./js/switcher.js"></script>
   </body>
 </html>
